--- a/sayhi.html
+++ b/sayhi.html
@@ -35,7 +35,7 @@
       
     >
       <div class="container-fluid">
-        <a href="https://github.com/antonellaOvO/portfolio-challenge.git"><i class="fa-brands fa-connectdevelop"></i>
+        <a href="https://github.com/antonellaOvO/portfolio-challenge.git" target="_blank"><i class="fa-brands fa-connectdevelop"></i>
 </a>
         <button
           class="navbar-toggler"
