Making it more SEO friendly Added <title>

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       src="https://kit.fontawesome.com/5e9142b9e1.js"
       crossorigin="anonymous"
     ></script>
-    <title>Homepage - Antonella Alares</title>
+    <title>Front-end developer - Antonella Alares</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
