Making it more SEO friendly Added on all <img> the alt class

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
     <div class="container-fluid">
       <div class="row about-row">
         <div class="col-6 column-img">
-          <img class="img-city img-fluid" src="images/image-city.png" alt="">
+          <img class="img-city img-fluid" src="images/image-city.png" alt="Views of the city of Barcelona">
           <h4> Based in Barcelona - Spain </h4>
         </div>
         
