--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <img
             class="img-fluid img-portfolio"
             src="images/img-porfolio-5.png"
-            alt=""/>
+            alt="Picture of Antonella Alares"/>
         </div>
         <div class="col-4 column-text">
           <h2>< CODER ></h2>
