--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,7 @@
             <img
               class="img-fluid rounded img-project-dogs"
               src="images/my-dogs-project.png"
-              alt=""
+              alt="Image of My Dogs project"
             />
           </div>
           <div class="col-md-6">
@@ -110,14 +110,14 @@
             </div>
           </div>
           <div class="col-md-6">
-            <img class="img-fluid rounded img-project-weather" src="images/weather-app.png" alt="" />
+            <img class="img-fluid rounded img-project-weather" src="images/weather-app.png" alt="Image of My Weather App project" />
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row mt-5 text-center row-yogurt">
           <div class="col-md-6 col-row-yogurt">
-            <img class="img-fluid rounded img-project-yogurt" src="images/yogurt.png" alt="" />
+            <img class="img-fluid rounded img-project-yogurt" src="images/yogurt.png" alt="Image of Yogurt project" />
           </div>
           <div class="col-md-6">
             <h2 class="mb-5 text-start">My Yogurt Project</h2>
