Added name on <nav>

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       
     >
       <div class="container-fluid">
-        <a href="https://github.com/antonellaOvO/portfolio-challenge.git" target="_blank"><i class="fa-brands fa-connectdevelop"></i>
+        <a href="https://github.com/antonellaOvO/portfolio-challenge.git" class="name-nav" target="_blank"><i class="fa-brands fa-connectdevelop"></i> Antonella Alares
 </a>
         <button
           class="navbar-toggler"
