Added container class to the title name

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
       </div>
     </nav>
 
+    
+   <div class="container-fluid">
+     <div class="row">
+       <div class="col-12 title-name">
+         <h1>Antonella</h1>
+        </div>
+     </div>
+   </div>
     <div class="container-fluid">
       <div class="row homepage-row">
         <div class="col-4 column-text">
@@ -84,8 +92,7 @@
           </p>
           </div>
         </div>
-        <div class="col-4 column-image">
-            <h1>Antonella</h1>
+        <div class="col-4 column-image"> 
           <img
             class="img-fluid img-portfolio"
             src="images/img-porfolio-5.png"
