--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
       
     >
       <div class="container-fluid">
-        <a href="https://github.com/antonellaOvO/portfolio-challenge.git" target="_blank"><i class="fa-brands fa-connectdevelop"></i>
-</a>
+        <a href="https://github.com/antonellaOvO/portfolio-challenge.git" class="name-nav" target="_blank"><i class="fa-brands fa-connectdevelop"></i> Antonella Alares
+        </a>
         <button
           class="navbar-toggler"
           type="button"
