Added linkedIn link

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link active" aria-current="page" href="about.html" alt="See my history">About me</a>
+              <a class="nav-link nav-link active" aria-current="page" href="about.html" title="See my history">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html" title="See my work">Projects</a>
@@ -98,6 +98,7 @@
     
     <a class="link-instagram" href="#" title="See my instagram"><i class="fa-brands fa-instagram"></i>@coderdeveloper</a>
    
+    <a class=link-linkedin href="#"><i class="fa-brands fa-linkedin"></i></a>
     
     <a href="#" title="See my Twitter"><i class="fa-brands fa-twitter"></i></a>
     </div>
