--- a/projects.html
+++ b/projects.html
@@ -146,6 +146,7 @@
     
     <a class="link-instagram" href="#" title="See my instagram"><i class="fa-brands fa-instagram"></i>@coderdeveloper</a>
    
+    <a class=link-linkedin href="#"><i class="fa-brands fa-linkedin"></i></a>
     
     <a href="#" title="See my Twitter"><i class="fa-brands fa-twitter"></i></a>
     </div>
