--- a/sayhi.html
+++ b/sayhi.html
@@ -29,11 +29,11 @@
       src="https://kit.fontawesome.com/5e9142b9e1.js"
       crossorigin="anonymous"
     ></script>
-    <title>Let's talk - Antonella Alares</title>
+    <title>Let's talk | Antonella Alares</title>
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #d1d2fd;">
+    <nav class="navbar navbar-expand-lg" style="background-color: #d1d2fd">
       <div class="container-fluid">
         <a
           href="https://github.com/antonellaOvO/portfolio-challenge.git"
@@ -126,7 +126,7 @@
     <div class="footer-p">
       <hr />
       <p class="sourced-sayhi">
-        This project was coded by Antonella Alares and it is
+        This portfolio was coded by Antonella Alares and it is
         <a
           class="source-link"
           href="https://github.com/antonellaOvO/portfolio-challenge.git"
