--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     >
       <div class="container-fluid">
         <a href="https://github.com/antonellaOvO/portfolio-challenge.git" title="See my GitHub" class="name-nav" target="_blank"><i class="fa-brands fa-connectdevelop"></i> Antonella Alares
-</a>
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -54,12 +54,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html" title="Homepage"
+              <a class="nav-link"  href="index.html" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="See my history">About me</a>
+              <a class="nav-link nav-link active" aria-current="page" href="about.html" title="See my history">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html" title="See my work">Projects</a>
@@ -83,29 +83,33 @@
    </div>
     <div class="container-fluid">
       <div class="row homepage-row">
-        <div class="col-4 column-text">
+        <div class="col-lg-4 column-text">
           <h2>< WEB DEV /></h2>
           <div class="card">
+            <div class="card-inside">
           <h5>FRONT-END DEVELOPER</h5>
           <p>
             Elegant and formal? or close and familiar? Anyway that's the best
             point of my work, challenging myself everyday!
           </p>
           </div>
+          </div>
         </div>
-        <div class="col-4 column-image"> 
+        <div class="col-lg-4 mt-4 mb-4 column-image"> 
           <img
             class="img-fluid img-portfolio"
             src="images/img-porfolio-5.png"
             alt="Picture of Antonella Alares"/>
         </div>
-        <div class="col-4 column-text">
+        <div class="col-lg-4 column-text">
           <h2>< CODER /></h2>
           <div class="card">
+            <div class="card-inside">
           <h5> DECODING MY WORLD </FRONT-END></h5>
           <p>
             Creating and sharing my passion for coding. Transforming experiencies.
           </p>
+          </div>
           </div>
         </div>
       </div>
