--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link"  href="index.html" title="Homepage"
+              <a class="nav-link nav-link active"  href="index.html" title="Homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-link active" aria-current="page" href="about.html" title="See my history">About me</a>
+              <a class="nav-link " aria-current="page" href="about.html" title="See my history">About me</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="projects.html" title="See my work">Projects</a>
