Making the about page responsive

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
    </div>
     <div class="container-fluid">
       <div class="row homepage-row">
-        <div class="col-lg-4 column-text">
+        <div class="col-lg-4 mb-4 mt-4 column-text">
           <h2>< WEB DEV /></h2>
           <div class="card">
             <div class="card-inside">
@@ -95,13 +95,13 @@
           </div>
           </div>
         </div>
-        <div class="col-lg-4 mt-4 mb-4 column-image"> 
+        <div class="col-lg-4 mb-5 mt-5 column-img-homepage"> 
           <img
             class="img-fluid img-portfolio"
             src="images/img-porfolio-5.png"
             alt="Picture of Antonella Alares"/>
         </div>
-        <div class="col-lg-4 column-text">
+        <div class="col-lg-4 mb-4 column-text">
           <h2>< CODER /></h2>
           <div class="card">
             <div class="card-inside">
