Making projects page responsive

--- a/projects.html
+++ b/projects.html
@@ -72,63 +72,58 @@
 
     <div class="container-fluid">
         <div class="row mt-5 text-center row-dogs">
-          <div class="col-md-6">
+          <div class="col-xl-6 img-dogs-column">
             <img
               class="img-fluid rounded img-project-dogs"
               src="images/my-dogs-project.png"
               alt="Image of My Dogs project"
             />
           </div>
-          <div class="col-md-6">
-            <h2 class="mb-5 text-start">My Dogs Project</h2>
-            <p class="project-description text-start p-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
+          <div class="col-xl-6 text-dogs-column">
+            <h2 class="mb-5 title-project-name">My Dogs Project</h2>
+            <p class="project-description p-0">
+              Meet my inseparable companions: Sam and Kairos! This was my first project and with great enthusiasm they agreed to be the protagonists. 
+              <br/> Built with CSS & HTML
             </p>
             <div class="mt-5">
-              <a class="link-launch" href="https://zippy-nougat-862096.netlify.app/"
+              <a class="link-launch d-block d-md-inline" href="https://zippy-nougat-862096.netlify.app/"
               target="_blank" title="See my project">Launch "My Dogs" Project</a
               >
             </div>
+            
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row mt-5 text-center row-weather">
-          <div class="col-md-6">
-            <h2 class="mb-5 text-start">My Weather App Project</h2>
-            <p class="project-description text-start p-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
+          <div class="col-xl-6 text-weather-column">
+            <h2 class="mb-5 title-project-name">My Weather App Project</h2>
+            <p class="project-description p-0">
+              Find out the climate of the place you want to explore without fear of bad weather.
+              <br/> Built with CSS, HTML & JavaScript.
             </p>
             <div class="mt-5">
-              <a class="link-launch text-start" href="https://papaya-narwhal-a3918b.netlify.app/" target="_blank" title="See my project">Launch "My Weather App" Project</a>
+              <a class="link-launch d-block d-md-inline" href="https://papaya-narwhal-a3918b.netlify.app/" target="_blank" title="See my project">Launch "My Weather App" Project</a>
             </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-xl-6 img-weather-column">
             <img class="img-fluid rounded img-project-weather" src="images/weather-app.png" alt="Image of My Weather App project" />
           </div>
         </div>
       </div>
       <div class="container-fluid">
         <div class="row mt-5 text-center row-yogurt">
-          <div class="col-md-6 col-row-yogurt">
+          <div class="col-xl-6 img-yogurt-column">
             <img class="img-fluid rounded img-project-yogurt" src="images/yogurt.png" alt="Image of Yogurt project" />
           </div>
-          <div class="col-md-6">
-            <h2 class="mb-5 text-start">My Yogurt Project</h2>
-            <p class="project-description text-start p-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-              eos eveniet alias temporibus deserunt veritatis minima fugiat
-              explicabo eum dolore.
+          <div class="col-xl-6 text-yogurt-column">
+            <h2 class="mb-5 title-project-name">My Yogurt Project</h2>
+            <p class="project-description p-0">
+             Why don't we take a break with a delicious yogurt? Learn more about this healthy dessert!
+                <br/> Built with CSS & HTML
             </p>
             <div class="mt-5">
-              <a class="link-launch text-start" href="https://kaleidoscopic-travesseiro-e30761.netlify.app/"
+              <a class="link-launch d-block d-md-inline" href="https://kaleidoscopic-travesseiro-e30761.netlify.app/"
               target="_blank" title="See my project">Launch "My Yogurt" Project</a
               >
             </div>
