Making say hi page more responsive

--- a/sayhi.html
+++ b/sayhi.html
@@ -92,38 +92,52 @@
         class="email-link"
         title="Send me an email"
       >
-        <i class="fa-light fa-paper-plane-top"></i
-        >antonella.developer@gmail.com</a
+        <i class="fa-light fa-paper-plane-top"></i>antonella.dev@gmail.com</a
       >
-      <footer>
-        <div class="links-footer">
+      <div class="row box-social-networks ">
+        <div class="col-md-3">
           <a href="#" title="See my profile on Facebook" target="_blank"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-
+          </div>
+          <div class="col-md-3 instagram-column">
+          <div class="row">
           <a
-            class="link-instagram"
+            class="link-instagram d-block d-md-inline"
             href="https://instagram.com/antonella_coder_developer?igshid=ZGUzMzM3NWJiOQ=="
             title="See my instagram"
             target="_blank"
             ><i class="fa-brands fa-instagram"></i
-            ><span class="count-insta">@antonella_coder</span></a
-          >
+            ></a>
 
+            <a href="" class="count-insta d-none d-md-inline"
+              >@antonella_coder</a>
+          </div>
+          
+          
+          </div>
+          <div class="col-md-3">
           <a
             class="link-linkedin"
             href="https://www.linkedin.com/in/antonella-alares"
             target="_blank"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
-
-          <a href="#" title="See my Twitter" target="_blank"
+          </div>
+          <div class="col-md-3">
+          <a
+            class="twitter-network"
+            href="#"
+            title="See my Twitter"
+            target="_blank"
             ><i class="fa-brands fa-twitter"></i
           ></a>
+          </div>
         </div>
-      </footer>
+      </div>
     </div>
-    <div class="footer-p">
+    <div class=" row footer-p">
+      <div class="col-12">
       <hr />
       <p class="sourced-sayhi">
         This portfolio was coded by Antonella Alares and it is
@@ -134,6 +148,7 @@
         >
       </p>
       <hr />
+      </div>
     </div>
   </body>
 </html>
